Updated Cause Effect Analysis Table

--- a/Group6_EnergyOptimizers.ipynb
+++ b/Group6_EnergyOptimizers.ipynb
@@ -674,7 +674,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 171,
+      "execution_count": null,
       "id": "2eb4d827",
       "metadata": {},
       "outputs": [
@@ -769,6 +769,13 @@
         "        \"No feedback loop → wasted energy\",\n",
         "        \"Increased demand due to thermal leakage\",\n",
         "        \"Improper settings → persistent inefficiency\"\n",
+        "    ],\n",
+        "    \"Validated by EDA\": [\n",
+        "        \"Smart HVAC had highest savings (T-Test p < 0.05)\",\n",
+        "        \"Low R² in regression shows poor adaptability\",\n",
+        "        \"Simulated sensor data added (occupancy/temp)\",\n",
+        "        \"Histogram outliers show inconsistent demand\",\n",
+        "        \"Step 5: Training shown to improve performance\"\n",
         "    ]\n",
         "})\n",
         "display(cause_effect_df)\n"
