--- a/Group6_EnergyOptimizers.ipynb
+++ b/Group6_EnergyOptimizers.ipynb
@@ -193,6 +193,20 @@
     },
     {
       "cell_type": "markdown",
+      "id": "bb0cc9fd",
+      "metadata": {},
+      "source": [
+        "### **Step 1.5: Research Hypothesis**\n",
+        "\n",
+        "This study aims to validate the following hypothesis:\n",
+        "\n",
+        "> **\"Implementing smart automation systems in commercial HVAC operations will significantly reduce electricity consumption by optimizing energy use.\"**\n",
+        "\n",
+        "The hypothesis is grounded in the assumption that intelligent controls, real-time automation, and adaptive optimization can reduce energy waste in commercial buildings compared to traditional HVAC systems. The following sections (EDA, T-test, ANOVA, Regression) are designed to confirm or reject this hypothesis using evidence from real and simulated datasets.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "42629730",
       "metadata": {},
       "source": [
@@ -674,7 +688,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 174,
       "id": "2eb4d827",
       "metadata": {},
       "outputs": [
@@ -701,6 +715,7 @@
               "      <th></th>\n",
               "      <th>Cause</th>\n",
               "      <th>Effect</th>\n",
+              "      <th>Validated by EDA</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -708,26 +723,31 @@
               "      <th>0</th>\n",
               "      <td>Manual HVAC control</td>\n",
               "      <td>Overcooling/heating during low occupancy</td>\n",
+              "      <td>Smart HVAC had highest savings (T-Test p &lt; 0.05)</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>Outdated control algorithms</td>\n",
               "      <td>Inability to adapt → energy waste</td>\n",
+              "      <td>Low R² in regression shows poor adaptability</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>Lack of sensors and real-time data</td>\n",
               "      <td>No feedback loop → wasted energy</td>\n",
+              "      <td>Simulated sensor data added (occupancy/temp)</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>Poor insulation or building envelope</td>\n",
               "      <td>Increased demand due to thermal leakage</td>\n",
+              "      <td>Histogram outliers show inconsistent demand</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>Operator unawareness/training</td>\n",
               "      <td>Improper settings → persistent inefficiency</td>\n",
+              "      <td>Step 5: Training shown to improve performance</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -741,12 +761,19 @@
               "3  Poor insulation or building envelope   \n",
               "4         Operator unawareness/training   \n",
               "\n",
-              "                                        Effect  \n",
-              "0     Overcooling/heating during low occupancy  \n",
-              "1            Inability to adapt → energy waste  \n",
-              "2             No feedback loop → wasted energy  \n",
-              "3      Increased demand due to thermal leakage  \n",
-              "4  Improper settings → persistent inefficiency  "
+              "                                        Effect  \\\n",
+              "0     Overcooling/heating during low occupancy   \n",
+              "1            Inability to adapt → energy waste   \n",
+              "2             No feedback loop → wasted energy   \n",
+              "3      Increased demand due to thermal leakage   \n",
+              "4  Improper settings → persistent inefficiency   \n",
+              "\n",
+              "                                   Validated by EDA  \n",
+              "0  Smart HVAC had highest savings (T-Test p < 0.05)  \n",
+              "1      Low R² in regression shows poor adaptability  \n",
+              "2      Simulated sensor data added (occupancy/temp)  \n",
+              "3       Histogram outliers show inconsistent demand  \n",
+              "4     Step 5: Training shown to improve performance  "
             ]
           },
           "metadata": {},
@@ -881,10 +908,26 @@
     },
     {
       "cell_type": "markdown",
+      "id": "fb71525c",
+      "metadata": {},
+      "source": [
+        "### Step 10: Hypothesis Reflection\n",
+        "\n",
+        "At the beginning of this project, we set out to test the hypothesis:\n",
+        "\n",
+        "> \"Implementing smart automation systems in commercial HVAC operations will significantly reduce electricity consumption by optimizing energy use.\"\n",
+        "\n",
+        "Based on the results from the T-Test, ANOVA, and Regression Analysis, we find strong support for this hypothesis. Smart HVAC systems consistently delivered higher energy savings and peak demand reductions compared to traditional systems. The findings validate that automation plays a crucial role in optimizing energy efficiency and support Ontario’s goal of reducing HVAC energy usage by 5.3 TWh by 2030.\n",
+        "\n",
+        "These results confirm that the hypothesis holds true in the context of the analyzed dataset and simulated conditions.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "2298bded",
       "metadata": {},
       "source": [
-        "### Step 10: Conclusion\n",
+        "### Step 11: Conclusion\n",
         "\n",
         "#### **Key Findings**\n",
         "1. **HVAC System Performance Analysis:**\n",
@@ -902,12 +945,6 @@
         "   - **External Temperature (°C) & Building Occupancy (%) were added to analyze their impact on HVAC energy usage.**\n",
         "   - **Future work should replace simulated data with real-time temperature & occupancy data** for more accuracy."
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "51643a8a",
-      "metadata": {},
-      "source": []
     }
   ],
   "metadata": {
